[gd_scene load_steps=10 format=3 uid="uid://c1c6b06mj1p2u"]

[ext_resource type="Script" path="res://Levels/level_1/level1.gd" id="1_pg361"]
[ext_resource type="PackedScene" uid="uid://ti3dcy733cxc" path="res://Levels/level_1/maplvl1.tscn" id="3_k7kxd"]
[ext_resource type="PackedScene" uid="uid://b57sr0tds5iub" path="res://player/player.tscn" id="3_ma1e5"]
[ext_resource type="PackedScene" uid="uid://7ipluu0nqigr" path="res://coin/coin.tscn" id="4_f5f0n"]
[ext_resource type="PackedScene" uid="uid://4hsrj6bxicge" path="res://player/Fog.tscn" id="4_gl48a"]
[ext_resource type="AudioStream" uid="uid://b8g13c0vi7i04" path="res://assets/Nightmare.wav" id="5_0lub6"]
[ext_resource type="PackedScene" uid="uid://cfsc3qvxf5inh" path="res://UI/pause_screen/pause_screen.tscn" id="5_36vj2"]
[ext_resource type="PackedScene" uid="uid://c0dcjrqoq46sw" path="res://Portal/portal2.tscn" id="8_n3g6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nog8"]
size = Vector2(11419, 912)

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pg361")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.666667, 0, 0.223529, 1)

[node name="Background" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Node2D" parent="."]

[node name="FirstPlayerPosition" type="Marker2D" parent="Level"]
position = Vector2(58, 222)

[node name="Player" parent="Level" instance=ExtResource("3_ma1e5")]
position = Vector2(249, 196)

[node name="Area2D" type="Area2D" parent="Level"]
position = Vector2(-406, 778)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Area2D"]
position = Vector2(2564, 1059)
shape = SubResource("RectangleShape2D_6nog8")

[node name="RespawnTimer" type="Timer" parent="Level"]
one_shot = true

[node name="map_lvl1" parent="Level" instance=ExtResource("3_k7kxd")]
position = Vector2(40, 225)

[node name="Coin" parent="Level" instance=ExtResource("4_f5f0n")]
position = Vector2(-4271, -1301)
scale = Vector2(3, 3)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource("5_0lub6")
volume_db = -18.0
autoplay = true

[node name="EndTimer" type="Timer" parent="Level"]

[node name="Portal2" parent="Level" instance=ExtResource("8_n3g6b")]
position = Vector2(-2914, -2327)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Fog" parent="UI" instance=ExtResource("4_gl48a")]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fading" type="ColorRect" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0, 0.0980392, 1)

[node name="Pause_Screen" parent="UI" instance=ExtResource("5_36vj2")]
visible = false

[connection signal="pause" from="Level/Player" to="." method="_on_player_pause" flags=18]
[connection signal="body_shape_entered" from="Level/Area2D" to="." method="_on_area_2d_body_shape_entered" flags=18]
[connection signal="timeout" from="Level/RespawnTimer" to="." method="_on_respawn_timer_timeout" flags=18]
[connection signal="timeout" from="Level/EndTimer" to="." method="_on_end_timer_timeout"]
[connection signal="body_shape_entered" from="Level/Portal2" to="." method="_on_portal_2_body_shape_entered"]
